add client html

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
-hello
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<title>Chat</title>
+<script src="js/client.js" defer></script>
+<form>
+  <input>
+  <button>send</button>
+</form>
+<ul></ul>
